Fix spacing using gap instead of margin

--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -12,7 +12,6 @@ img {
   font-weight: 900;
   display: flex;
   justify-content: center;
-  margin-bottom: 32px;
 }
 
 /* do not edit this footer */
@@ -28,16 +27,16 @@ img {
   background: #eee;
 }
 
-.mainbox {
+.main-box {
   display: flex;
   flex-direction: column;
-  gap: 35px;
+  gap: 25px;
   justify-content: center;
 }
 
 .pics-and-info {
   display: flex;
-  gap: 52px;
+  gap: 25px;
   justify-content: center;
 }
 
